# perse_rover-firmware-microros

./: .gitignore  .gitmodules  MICROROS_README.md  README.md  TASKS.md
main/: CMakeLists.txt  main.cpp
main/src/: Settings.h
main/src/Periph/: WiFiSTA.cpp  WiFiSTA.h
main/src/Services/: MicroROS.cpp  MicroROS.h  MicroROSService.cpp  MicroROSService.h  PairService.cpp  PairService.h
main/src/States/: PairState.cpp
main/src/Util/: Events.h  Services.h
